--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-hacker
+title: Welcome to slantto's repo
+description: check back for updates as I learn more about github pages
